# chain

./: .gitignore  Makefile  README  package-lock.json  package.json
contract/: Cargo.toml
contract/src/: lib.rs  market.rs  test.rs  token.rs
dapp/: .env.example  README.md  astro.config.mjs  package-lock.json  package.json  tsconfig.json
dapp/contracts/prediction_contract/src/: lib.rs
dapp/contracts/vote_contract/: Cargo.toml
dapp/src/: index.css  styles.css
dapp/src/components/: App.jsx  BetForm.jsx  CardBetting.astro  CardCarousel.astro  Carousel.astro  ConnectWallet.astro  Counter.astro  Modal.astro  Modal_clone.jsx  Modal_clone.scss  Prediction.astro  SimpleSlider.jsx  carousel.js  localCounter.jsx
dapp/src/data/: markets.json
dapp/src/pages/: App.astro  carousel.astro  display.astro  index.astro  local.astro  predictions.astro
dapp/src/typings/: index.d.ts
dapp/utils/: account_setup.js  account_setup.ts  contract_caller.ts  event_caller.ts  position_const.ts  state.ts  stellar_wallets_kit.ts
marketer/: .env  Cargo.toml  Makefile  endpoints.txt  gen_db.sql  markets.json  test.sh
marketer/src/: main.rs
prediction_contract/: Cargo.toml  Makefile  invoke.sh
prediction_contract/src/: lib.rs  market.rs  test.rs  token.rs
prediction_contract_v2/src/: lib.rs
token_contract/: Cargo.toml  Makefile
token_contract/src/: lib.rs  token.rs
vote_contract/: lib.rs
vote_contract/src/: lib.rs
