[package]
name = "contract"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "21.7" }
soroban-token-sdk = { version = "21.7" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = true
debug-assertions = false
panic = "abort"
# codegen-units = 1
# lto = true
